--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -37,7 +37,7 @@
 				<i class="fa fa-plus" aria-hidden="true"></i> Add Post
 			</button>
 			<button type="button" id="Search_Entry" class="btn btn-primary btn-sm">
-				<i class="fa fa-search" aria-hidden="true"></i> Search
+				<i class="fa fa-search" aria-hidden="true"></i> Advanced Search
 			</button> 
 		</div>
   </div>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	
-<!-- Modal Add Posttype-->
+<!-- Modal Edit Posttype-->
 	<div class="modal fade small" id="EditPosttypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 			<div class="modal-content">
@@ -102,6 +102,75 @@
 					<button type="button" class="btn btn-sm btn-secondary small" data-dismiss="modal">Close</button>
 				</div>
 				
+			</div>
+		</div>
+	</div>
+
+<!-- Modal Add Post -->
+	<div class="modal fade" id="AddPost" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog  modal-dialog-centered modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h6 class="modal-title" id="AddPostTitle">Add Post</h6>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="row p-3">
+					<div class="modal-body col-sm-9" >
+						<form method="post" action="" id="addPostTrigger" enctype="multipart/form-data">
+							<div id="addPostModalBody" >
+								{% csrf_token %}
+								{{form.as_p }}
+							</div>
+						</form>
+					</div>
+					<div id="chooseButtons" class="col-sm-3 p-3">
+					</div>
+				</div>
+				<div id="returnedPostFields">
+				</div>
+				
+				<div class="modal-footer justify-content-between">				
+						{% csrf_token %}
+					<button type="submit" id="SubmitPost" class="btn btn-outline-primary btn-sm mr-auto"><i class="fa fa-save" aria-hidden="true"></i> Submit Post</button>
+					<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+<!-- Modal Search Post -->
+	<div class="modal fade" id="SearchPost" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog  modal-dialog-centered modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h6 class="modal-title" id="SearchPostTitle">Advanced Search</h6>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+
+				<div class="row p-3">
+					<div class="modal-body col-sm-6" >
+						<form method="post" action="" id="addSearchTrigger" enctype="multipart/form-data">
+							<div id="SearchPostBody" >
+								{% csrf_token %}
+								{{form.as_p }}
+							</div>
+						</form>
+					</div>
+					<div id="chooseSearchButtons" class="col-sm-6 p-3">
+					</div>
+				</div>
+				<div id="returnedSearchFields" class="p-3">
+					<form method="post" action="" id="SearchEntry" enctype="multipart/form-data"></form>
+				</div>
+				<div class="modal-footer justify-content-between">				
+						{% csrf_token %}
+					<button type="submit" id="SubmitSearch" class="btn btn-outline-primary mr-auto btn-sm"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+					<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+				</div>
 			</div>
 		</div>
 	</div>
