--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -42,24 +42,34 @@
 		</div>
   </div>
   
-	{% for posts in post_resp %}
+	{% for posts in postEntries.postInstances %}
 	<div class="card mb-2">
 	  <table class="table p-2">
 		<tr>
 			<tr>
-				{% for key,val in posts.1.items %}
+				{% for fields in posts.postList %}
 				 <td>
 					<div class="row p-2">
 						<div class="col-sm-15">
-							<b>{{ key }}:&nbsp</b>
-							 {{ val }}
+							{% for types in posts.posttype %}
+								{% if types.name == fields.propertyName  %}
+									{% if types.relatedPrimitives  == "Image"  %}
+										<b>{{ fields.propertyName }}:&nbsp</b>
+										<img src="{{ fields.propertyValue }}" width="125" height="100" class="img-thumbnail">
+									{% else %}
+										<b>{{ fields.propertyName }}:&nbsp</b>
+										{{ fields.propertyValue }}
+										{{ types.relatedPrimitives }}
+									{% endif %}
+								{% endif %}
+							{% endfor %}
 						</div>
 					</div>
 				</td>
 				{% endfor %}
 				<td>
 					<div class="col-sm-2">
-						<button type="button" id = "deletePost" hash="{{ posts.0 }}" class="btn btn-outline-secondary"><i class="fa fa-trash" style="font-size:24px" aria-hidden="true"></i></button>
+						<button type="button" id = "deletePost" hash="{{ posts.postList.0.entryHash }}" class="btn btn-sm btn-outline-secondary"><i class="fa fa-trash" style="font-size:24px" aria-hidden="true"></i></button>
 					</div>
 				</td>
 			</tr>
