--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -44,6 +44,34 @@
   
 	{% for posts in postEntries.postInstances %}
 	<div class="card mb-2">
+		<div class="d-flex flex-row align-items-center justify-content-between">
+            <div id="PosttypeName" class="left">
+				<h6 class="m-0 font-weight-bold text-primary" >
+				<button type="button" class="btn btn-sm">
+					<p id="Posttype">
+						<b>{{ posts.posttype.0.relatedDatatype}}</b>
+					</p>
+					
+				</button>
+				</h6>
+			</div>
+			<div class="right small">Created by: {{ posts.posttype.0.fieldCreator }} at {{ posts.posttype.0.fieldCreationDate }}
+			</div>
+			<div>
+				<button type="button" class="btn btn-primary btn-sm small" ReportPost="Yes" id="ReportPost" hash="{{ comm.communityHash }}">
+						<i class="fa fa-thumbs-up small" aria-hidden="true"></i> 
+						Report
+				</button>
+				<button type="button" class="btn btn-primary btn-sm small" SubscribePost="Yes" id="SubscribePost" hash="{{ comm.communityHash }}">
+						<i class="fas fa-sign-in-alt small"></i> 
+						Subscribe
+				</button>
+					
+			</div>
+		</div>
+		<!-- Card Body -->
+	<div class="card-body">
+	  <div class="modal-body row">
 	  <table class="table p-2">
 		<tr>
 			<tr>
@@ -53,13 +81,16 @@
 						<div class="col-sm-15">
 							{% for types in posts.posttype %}
 								{% if types.name == fields.propertyName  %}
-									{% if types.relatedPrimitives  == "Image"  %}
+									{% if types.relatedPrimitives.name  == "Image"  %}
 										<b>{{ fields.propertyName }}:&nbsp</b>
 										<img src="{{ fields.propertyValue }}" width="125" height="100" class="img-thumbnail">
+									{% elif types.relatedPrimitives.name  == "Location"%}
+									<div id="googleMap" style="width:20%;height:100px;"></div>
 									{% else %}
 										<b>{{ fields.propertyName }}:&nbsp</b>
 										{{ fields.propertyValue }}
-										{{ types.relatedPrimitives }}
+										{{ types.relatedPrimitives.name }}
+										
 									{% endif %}
 								{% endif %}
 							{% endfor %}
@@ -85,8 +116,10 @@
 		  </div>
 		  
 	  </div>
+	  </div>
+   </div>
 	  {% endfor %}
-	  
+	 
 	
 <!-- Modal Add Posttype-->
 	<div class="modal fade small" id="PosttypeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -222,30 +255,7 @@
 		</div>
 	</div>
 	
-	
-<div id="map"></div>
 	 
-    <script>
-// Initialize and add the map
-function initMap() {
-  // The location of Uluru
-  var uluru = {lat: -25.344, lng: 131.036};
-  // The map, centered at Uluru
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 4, center: uluru});
-  // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: uluru, map: map});
-}
-    </script>
-    <!--Load the API from the specified URL
-    * The async attribute allows the browser to render the page while the API loads
-    * The key parameter will contain your own API key (which is not needed for this tutorial)
-    * The callback parameter executes the initMap() function
-    -->
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYBw5zZ3pv2dCbD-8lIdFUDQUkN_7T3yg&callback=initMap">
-    </script>
-	
 	
 <div class="pagination">
     <span class="step-links">
